# collection

./: CMakeLists.txt  CMakeLists.txt.in  Readme.md
include/: Collection.hpp  LinkedList.hpp  Queue.hpp  Stack.hpp
tests/: CMakeLists.txt  gtest_Collection.cpp  gtest_LinkedList.cpp  gtest_Queue.cpp  gtest_Stack.cpp
